# cctech

./: .gitignore  README.md
Inventor Assembly Animation/AnimationSequence/: model_derivative_api.py  structure.txt  test.py
Inventor Assembly Animation/AnimationSequence/responses/: 01_get_access_token.json  02_create_bucket.json  03_get_signed_url_blade_main.ipt.json  03_get_signed_url_blade_top.ipt.json  03_get_signed_url_scissor_spring.ipt.json  03_get_signed_url_scissors.iam.json  04_finalize_upload_blade_main.ipt.json  04_finalize_upload_blade_top.ipt.json  04_finalize_upload_scissor_spring.ipt.json  04_finalize_upload_scissors.iam.json  06_start_translation_job.json  07_translation_status.json  08_metadata.json  09_object_hierarchy.json  10_properties_all_objects.json
Inventor Assembly Animation/InventorExporterAlgo/: InventorExporterAlgo.csproj  Program.cs  assemblies.txt  main.js
Inventor Assembly Animation/InventorExporterAlgo/data/: Assembly1.iam  FixturePlate.ipt  Lever_1.ipt  assembly_data_2.json  complete_assembly_data.json
Inventor Assembly Animation/InventorExporterAlgo/lib/: Assembly.cs  AssemblyBuilder.cs  AssemblyComponent.cs  AssemblyData.cs
Inventor Assembly Animation/InventorExporterAlgo/outputs/: assembly_data.json  assembly_data_3.json  assembly_data_4.json  scissors.json  scissors_assembly_data.json  scissors_data.json  single_cylinder_assembly_data.json
Inventor Assembly Animation/Web/: A3-HLD-CCTech.drawio  Cctech A3 WorkFlow  README.md  Untitled Diagram.drawio
Inventor Assembly Animation/Web/client/: package-lock.json  vite.config.js
Inventor Assembly Animation/Web/client/src/: App.jsx
Inventor Assembly Animation/Web/server/: index.js  package-lock.json  package.json
InventorExporter/: InventorExporter.csproj  InventorExporter.sln  MyAddIn.cs
InventorExporter/Properties/: AssemblyInfo.cs
InventorExporterAlgo/: InventorExporterAlgo.csproj  InventorExporterAlgo.sln  Program-Original.cs  Program.cs  assemblies.txt  main.txt
InventorExporterAlgo/data/: assembly.json  complete_assembly_data.json
InventorExporterAlgo/lib/: Assembly.cs  AssemblyBuilder.cs  AssemblyComponent.cs  AssemblyPart.cs
InventorReader/: InventorReader.sln  Program.cs
ProjectQT/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h  resources.qrc  screen_selector_dialog.cpp  screen_selector_dialog.h  sonar-project.properties
ProjectQT/.cache/clangd/index/: bezier_curve.h.A412A88CE625FD23.idx  bezier_renderer.h.FBD79F665FEDA80C.idx  bezier_sidebar.h.575FEE695608A632.idx  bezier_sketcher.h.A9A820A7090E9F06.idx  drawable-shape.h.38682435C7E09CFB.idx  file-utils.cpp.7AD35F6BE4B884A8.idx  file-utils.h.DEA39C8808FE728A.idx  mainwindow.cpp.D9D3D1FAD543FBA5.idx  mainwindow.h.6EB49E08645E27E3.idx  point.h.65E43A1C38612258.idx  scene.h.5985C13D78B6FB43.idx  scene_creator.h.02ACBBB24E7DA42A.idx  scene_renderer.cpp.66C419E5B7F60BF1.idx  scene_renderer.h.1BE5B121400DB912.idx  screen_selector_dialog.h.905062BD4EE15681.idx  shape.h.05BEA9A66CB86373.idx  shapes_sidebar.h.A0CE04D2149133BC.idx  threed-utils.cpp.D7AC6A79865AF148.idx  threed-utils.h.16540C6D1532D172.idx  transformation_sidebar.h.1FEC2128BF45F56D.idx
ProjectQT/.scannerwork/: report-task.txt
ProjectQT/.scannerwork/scanner-report/: activerules.pb  component-1.pb  metadata.pb
ProjectQT/bezier_sketcher/: bezier_sidebar.h
ProjectQT/data/: cube.stl  cube_A.stl  cube_B.stl  sphere.stl
ProjectQT/geometry/include/: drawable-shape.h  gnuplot-utils.h  scene.h  transformations.h
ProjectQT/geometry/src/: bezier.cpp  cylinder.cpp  drawable-shape.cpp  sketcher.cpp  sphere.cpp
ProjectQT/include/: drawable-shape.h  file-utils.h  shape.h  threed-utils.h
ProjectQT/includes/: bezier_curve.h  boolean2d.h  drawable-shape.h  file-utils.h  point.h  scene.h  shape.h  shapes.h  sketcher.h  sketcher_primitives.h  threed-utils.h  transformations.h
ProjectQT/integration/: mainscreen.cpp  mainscreen.h
ProjectQT/model_editor/: model_editor.cpp  model_editor.h
ProjectQT/scene_creator/: transformation_sidebar.cpp  transformation_sidebar.h
ProjectQT/screens/: bezier_sketcher.cpp  bezier_sketcher.h  scene_creator.cpp  scene_creator.h  scenecreator.cpp
ProjectQT/sketcher/: sketch_renderer.cpp  sketch_renderer.h  sketcher-primitives.h  sketcher.cpp  sketcher.h  sketcher_primitives.h  sketcher_screen.cpp  sketcher_screen.h  test.cpp
ProjectQT/src/: bezier_curve.cpp  boolean2d.cpp  drawable-shape.cpp  file-utils.cpp  rectangle.cpp  scene.cpp  sketcher.cpp  threed-utils.cpp  transformations.cpp
ProjectQT/src/shapes/: bezier.cpp  circle.cpp  cuboid.cpp  cylinder.cpp  sphere.cpp
ProjectQT/test/: bezier_curve.cpp  bezier_curve.h  renderer.cpp  renderer.h  sidebar.cpp  sidebar.h  test-screen.cpp  test-screen.h  test-window.cpp  test-window.h
ProjectQT/widgets/: bezier_renderer.cpp  bezier_renderer.h  bezier_sidebar.cpp  scene_renderer.cpp  scene_renderer.h  shapes_sidebar.cpp  shapes_sidebar.h  transformation_sidebar.cpp  transformation_sidebar.h
ShoppingList/: Program.cs  ShoppingList.cs  ShoppingList.sln  shoppingList.json
assignment/: Makefile
assignment-1/: Makefile  line  line.cpp
assignment-2/: 3dline  3dline.cpp  Makefile
assignment-2,3/: 2dline.cpp  3dline.cpp  Makefile  test.cpp
assignment-2,3/lib/: geometry.h  gnuplot-utils.cpp
assignment-2,3/recyclebin/: line.cpp  point.cpp
project/: Makefile  plot_3d.gnu
project/application/src/: main.cpp  utils.cpp
project/data/: cuboid.stl  mycuboid.stl  mynewcuboid.stl
project/geometry/include/: drawable-shape.h  geometry.h  gnuplot-utils.h  scene.h  sketcher.h  threed-utils.h  transformations.h
project/geometry/src/: bezier.cpp  circle.cpp  cuboid.cpp  cylinder.cpp  drawable-shape.cpp  geometry.cpp  gnuplot-utils.cpp  rectangle.cpp  scene.cpp  shape.cpp  sketcher.cpp  sphere.cpp  threed-utils.cpp  transformations.cpp
project/stl-sample/: Makefile  cuboid.stl  mysphere.stl  sample.stl  test  test.cpp
project/test-unit/: Makefile  stlutils.cpp  test  test.cpp  utils.cpp
(+30 files in other folders)
